<resources>
    <string name="app_name">快易佳货运</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">快易佳货运部系统</string>
    <string name="nav_header_subtitle">www.kegmall.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">帮助</string>

    <string name="menu_order">订单管理</string>
    <string name="menu_person">人员管理</string>
    <string name="menu_profit">收益管理</string>
    <string name="menu_carManage">车辆管理</string>
    <string name="menu_webBranch">网点管理</string>
    <string name="menu_zhuangchema">装车码</string>
    <string name="menu_scanload">扫码装车</string>
    <string name="menu_scanfache">扫码发车</string>
    <string name="menu_scandownload">扫码卸货</string>
    <string name="menu_fenrun">分润系统</string>
    <string name="menu_yunjia">运价系统</string>
    <string name="menu_notification">消息推送</string>
    <string name="menu_loginout">退出登录</string>
    <string name="menu_route">线路管理</string>

    <string name="tab_text_1">已完成</string>
    <string name="tab_text_2">进行中</string>
    <string name="tab_text_3">代收款</string>
    <string name="tab_text_4">扫描不全</string>
    <string name="tab_text_5">滞留订单</string>

    <string name="tips_text_1">未查询到数据</string>
    <string name="tips_text_2">运单列表</string>
    <string name="tips_text_3">退单列表</string>

    <string name="waybill_list_nav_1">进行中</string>
    <string name="waybill_list_nav_2">已完成</string>
    <string name="waybill_list_nav_3">已取消</string>
    <string name="waybill_list_nav_4">全部</string>
    <string name="waybill_list_nav_5">筛选</string>


    <string-array name="area">
        <item>南坪</item>
        <item>沙坪坝</item>
        <item>武隆</item>
        <item>北碚</item>
    </string-array>

    <string-array name="sad">
        <item>行车记录仪</item>
        <item>火花塞</item>
        <item>座椅靠垫</item>
        <item>转向盘</item>
    </string-array>

    <string-array name="choose">
        <item>南坪</item>
        <item>沙坪坝</item>
        <item>武隆</item>
        <item>北碚</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_filter">filterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>